[tool.poetry]
name = "app"
version = "0.2.0"
description = ""
authors = ["Admin <admin@sarus.tech>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
fastapi = "^0.109.1"
python-multipart = "^0.0.7"
email-validator = "^2.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.2.3"
pydantic = ">2.0"
emails = "^0.6"
gunicorn = "^21.2.0"
jinja2 = "^3.1.2"
alembic = "^1.12.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.27"
psycopg = {extras = ["binary"], version = "^3.1.13"}
sqlmodel = "^0.0.22"
# Pin bcrypt until passlib supports the latest
bcrypt = "4.2"
pydantic-settings = "^2.2.1"
sentry-sdk = {extras = ["fastapi"], version = "^1.40"}
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.3"
# For integrations
openai = "^1.23"
anthropic = "^0.34"
mistralai = "^1.1"
anyio = {extras = ["trio"], version = "^4.3.0"}
faker = "^29.0"
pyarrow = "^17.0"
pydot = "^3.0"
minio = "^7.2.8"
pymupdf = "^1.24.10"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
mypy = "^1.8.0"
pre-commit = "^3.6.2"
pytest-mock = "^3.12.0"
types-python-jose = "^3.3.4.0"
types-passlib = "^1.7.7.0"
rich = "^13.7.1"
ruff = "~=0.6.9"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
strict = true
exclude = ["venv", "alembic"]