[tool.poetry]
name = "client"
version = "0.1.0"
description = "A client to use arena AI"
authors = ["Nicolas Grislain <ng@sarus.tech>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
openai = "^1.23"
anthropic = "^0.21"
mistralai = "^0.1"
anyio = {extras = ["trio"], version = "^4.3.0"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
