[tool.poetry]
name = "hf-inference"
version = "0.1.0"
description = ""
authors = ["Nicolas Grislain <Nicolas.Grislain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
huggingface-hub = "^0.24.6"
python-dotenv = "^1.0.1"
transformers = "^4.44.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
